[tool.poetry]
name = "telegram-web-app-bot-example"
version = "0.1.0"
description = ""
authors = ["Vionaaru <d.s.kasimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-cors = "^5.0.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
